<?xml version="1.0"?>
<package format="2">
  <name>hpcc-robotics</name>
  <version>1.0.0</version>
  <description>A package that facilitates the ingestion of data from sensors commonly used in robotics into the HPCC Systems platform</description>

  <maintainer email="aramis.tanelus@lexisnexisrisk.com">Aramis Tanelus</maintainer>
  <author email="aramis.tanelus@lexisnexisrisk.com">Aramis Tanelus</author>

  <license>MIT</license>


  <url type="website">https://github.com/Aramist/hpcc-robotics</url>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


</package>
